clusters/the-big-ship/apps/blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: default
  labels:
    app: blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: wyson002/my-hugo-blog:v0.0.3 # {"$imagepolicy": "flux-system:hugo-policy"}
          ports:
            - containerPort: 80
